@@ -1082,70 +1082,6 @@ mail status in mode line"))
 	 (known (assq read-mail-command known-rmail-commands)))
     (if known (cdr known) (symbol-name read-mail-command))))
 
-(defvar menu-bar-encryption-decryption-menu
-  (make-sparse-keymap "Encryption/Decryption"))
-
-(define-key menu-bar-tools-menu [encryption-decryption]
-  (list 'menu-item "Encryption/Decryption" menu-bar-encryption-decryption-menu))
-
-(define-key menu-bar-tools-menu [separator-encryption-decryption]
-  '("--"))
-
-(define-key menu-bar-encryption-decryption-menu [insert-keys]
-  '(menu-item "Insert Keys" epa-insert-keys
-	      :help "Insert public keys after the current point"))
-
-(define-key menu-bar-encryption-decryption-menu [export-keys]
-  '(menu-item "Export Keys" epa-export-keys
-	      :help "Export public keys to a file"))
-
-(define-key menu-bar-encryption-decryption-menu [import-keys-region]
-  '(menu-item "Import Keys from Region" epa-import-keys-region
-	      :help "Import public keys from the current region"))
-
-(define-key menu-bar-encryption-decryption-menu [import-keys]
-  '(menu-item "Import Keys from File" epa-import-keys
-	      :help "Import public keys from a file"))
-
-(define-key menu-bar-encryption-decryption-menu [list-keys]
-  '(menu-item "List Keys" epa-list-keys
-	      :help "Browse your public keyring"))
-
-(define-key menu-bar-encryption-decryption-menu [separator-keys]
-  '("--"))
-
-(define-key menu-bar-encryption-decryption-menu [encrypt-region]
-  '(menu-item "Encrypt Region" epa-encrypt-region
-	      :help "Encrypt the current region"))
-
-(define-key menu-bar-encryption-decryption-menu [encrypt-file]
-  '(menu-item "Encrypt File" epa-encrypt-file
-	      :help "Encrypt a file"))
-
-(define-key menu-bar-encryption-decryption-menu [sign-region]
-  '(menu-item "Sign Region" epa-sign-region
-	      :help "Create digital signature of the current region"))
-
-(define-key menu-bar-encryption-decryption-menu [sign-file]
-  '(menu-item "Sign File" epa-sign-file
-	      :help "Create digital signature of a file"))
-
-(define-key menu-bar-encryption-decryption-menu [verify-region]
-  '(menu-item "Verify Region" epa-verify-region
-	      :help "Verify digital signature of the current region"))
-
-(define-key menu-bar-encryption-decryption-menu [verify-file]
-  '(menu-item "Verify File" epa-verify-file
-	      :help "Verify digital signature of a file"))
-
-(define-key menu-bar-encryption-decryption-menu [decrypt-region]
-  '(menu-item "Decrypt Region" epa-decrypt-region
-	      :help "Decrypt the current region"))
-
-(define-key menu-bar-encryption-decryption-menu [decrypt-file]
-  '(menu-item "Decrypt File" epa-decrypt-file
-	      :help "Decrypt a file"))
-
 (defvar menu-bar-games-menu (make-sparse-keymap "Games"))
 
 (define-key menu-bar-tools-menu [games]
@@ -1193,6 +1129,73 @@ mail status in mode line"))
 (define-key menu-bar-games-menu [5x5]
   '(menu-item "5x5" 5x5
 	      :help "Fill in all the squares on a 5x5 board"))
+
+(defvar menu-bar-encryption-decryption-menu
+  (make-sparse-keymap "Encryption/Decryption"))
+
+(define-key menu-bar-tools-menu [encryption-decryption]
+  (list 'menu-item "Encryption/Decryption" menu-bar-encryption-decryption-menu))
+
+(define-key menu-bar-tools-menu [separator-encryption-decryption]
+  '("--"))
+
+(define-key menu-bar-encryption-decryption-menu [insert-keys]
+  '(menu-item "Insert Keys" epa-insert-keys
+	      :help "Insert public keys after the current point"))
+
+(define-key menu-bar-encryption-decryption-menu [export-keys]
+  '(menu-item "Export Keys" epa-export-keys
+	      :help "Export public keys to a file"))
+
+(define-key menu-bar-encryption-decryption-menu [import-keys-region]
+  '(menu-item "Import Keys from Region" epa-import-keys-region
+	      :help "Import public keys from the current region"))
+
+(define-key menu-bar-encryption-decryption-menu [import-keys]
+  '(menu-item "Import Keys from File..." epa-import-keys
+	      :help "Import public keys from a file"))
+
+(define-key menu-bar-encryption-decryption-menu [list-keys]
+  '(menu-item "List Keys" epa-list-keys
+	      :help "Browse your public keyring"))
+
+(define-key menu-bar-encryption-decryption-menu [separator-keys]
+  '("--"))
+
+(define-key menu-bar-encryption-decryption-menu [sign-region]
+  '(menu-item "Sign Region" epa-sign-region
+	      :help "Create digital signature of the current region"))
+
+(define-key menu-bar-encryption-decryption-menu [verify-region]
+  '(menu-item "Verify Region" epa-verify-region
+	      :help "Verify digital signature of the current region"))
+
+(define-key menu-bar-encryption-decryption-menu [encrypt-region]
+  '(menu-item "Encrypt Region" epa-encrypt-region
+	      :help "Encrypt the current region"))
+
+(define-key menu-bar-encryption-decryption-menu [decrypt-region]
+  '(menu-item "Decrypt Region" epa-decrypt-region
+	      :help "Decrypt the current region"))
+
+(define-key menu-bar-encryption-decryption-menu [separator-file]
+  '("--"))
+
+(define-key menu-bar-encryption-decryption-menu [sign-file]
+  '(menu-item "Sign File..." epa-sign-file
+	      :help "Create digital signature of a file"))
+
+(define-key menu-bar-encryption-decryption-menu [verify-file]
+  '(menu-item "Verify File..." epa-verify-file
+	      :help "Verify digital signature of a file"))
+
+(define-key menu-bar-encryption-decryption-menu [encrypt-file]
+  '(menu-item "Encrypt File..." epa-encrypt-file
+	      :help "Encrypt a file"))
+
+(define-key menu-bar-encryption-decryption-menu [decrypt-file]
+  '(menu-item "Decrypt File..." epa-decrypt-file
+	      :help "Decrypt a file"))
 
 (define-key menu-bar-tools-menu [simple-calculator]
   '(menu-item "Simple Calculator" calculator
